styled most of the content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <p class="form__paragraph">Have a nice day!</p>
         <form action="" method="post" class="form__sign-in">
-          <legend>Let's do this!</legend>
+          <legend class="legend">Let's do this!</legend>
           <div class="input">
             <label for="first-name">first name</label>
             <input type="text" name="first-name" id="first-name" />
@@ -57,7 +57,7 @@
             <input type="password" name="password" id="password" />
           </div>
           <div class="input">
-            <label for="confirm-password">First Name</label>
+            <label for="confirm-password">confirm password</label>
             <input
               type="password"
               name="confirm-password"
@@ -65,15 +65,17 @@
             />
           </div>
         </form>
-        <button type="submit">Create Account</button>
-        <p>Already have an account? <a href="">Log in</a></p>
+        <button class="button" type="submit">Create Account</button>
+        <p class="paragraph">
+          Already have an account? <a href="/index.html">Log in</a>
+        </p>
+        <div class="attribution">
+          Coded by
+          <a href="https://github.com/bazankamil" target="_blank"
+            >Historyk Programista.</a
+          >
+        </div>
       </section>
     </main>
-    <div class="attribution">
-      Coded by
-      <a href="https://github.com/bazankamil" target="_blank"
-        >Historyk Programista.</a
-      >
-    </div>
   </body>
 </html>
