--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           <legend class="legend">Let's do this!</legend>
           <div class="input">
             <label for="first-name">first name</label>
-            <input type="text" name="first-name" id="first-name" />
+            <input type="text" name="first-name" id="first-name" required />
           </div>
           <div class="input">
             <label for="last-name">last name</label>
-            <input type="text" name="last-name" id="last-name" />
+            <input type="text" name="last-name" id="last-name" required />
           </div>
           <div class="input">
             <label for="email">email</label>
-            <input type="email" name="email" id="email" />
+            <input type="email" name="email" id="email" required />
           </div>
           <div class="input">
             <label for="phone-number">phone number</label>
@@ -54,14 +54,26 @@
           </div>
           <div class="input">
             <label for="password">password</label>
-            <input type="password" name="password" id="password" />
+            <input
+              class="password error"
+              type="password"
+              name="password"
+              id="password"
+              required
+              minlength="5"
+              maxlength="15"
+            />
           </div>
           <div class="input">
             <label for="confirm-password">confirm password</label>
             <input
+              class="password error"
               type="password"
               name="confirm-password"
               id="confirm-password"
+              required
+              minlength="5"
+              maxlength="15"
             />
           </div>
         </form>
