modified validation, added JS

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="input">
             <label for="confirm-password">confirm password</label>
             <input
-              class="password error"
+              class="confirmPassword error"
               type="password"
               name="confirm-password"
               id="confirm-password"
