--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="https://unsplash.com/@maledobro">@maledobro</a>
         </div>
       </section>
-      <section class="form">
+      <section class="form" id="form">
         <div class="form__text">
           This is not a real online service! This is simple The Odin Project
           learning... project. I'm making a lot of small aplications, to learn
@@ -76,8 +76,8 @@
               maxlength="15"
             />
           </div>
+          <button class="button" type="submit">Create Account</button>
         </form>
-        <button class="button" type="submit">Create Account</button>
         <p class="paragraph">
           Already have an account? <a href="/index.html">Log in</a>
         </p>
